# BHT_amyloid

./: .gitignore  AGGRESSOR.py  AGGRESSOR.rar  APPNN_from R to CSV.ipynb  README.md  aggressor.sh  aggressor.toml  appnn_converter.R  parser_APPNN.R  parser_appnn.R  path_converter.py  pyMol.py  wilcoxon.py
aa/: aa.txt  molecule.py  structure.py
aggressor/: RPS2_human.fasta  __init__.py  __main__.py  analysis.py  cli.py  clustering.py  config.py  fasta_io.py  main.py  models.py  mutagenesis.py  reporting.py  rules.py  sequtils.py
all/: APP_human_all.csv  GAPDH_human_iso1_all.csv  GAPDH_human_iso2_all.csv  RPL27_human_all.csv  RPL36_human_all.csv  RPL36_metascores.csv  RPS2_human_all.csv  RPS6_human_all.csv  beutihm.py  cl.py  visualize.py  visualize_hms.py
all/mut/: APP_F37D_all.csv  APP_F37G_all.csv  APP_F37K_all.csv  APP_F37P_all.csv  GAPDHiso1_Y45D_all.csv  GAPDHiso1_Y45G_all.csv  GAPDHiso1_Y45K_all.csv  GAPDHiso1_Y45P_all.csv  GAPDHiso2_V2D_all.csv  GAPDHiso2_V2G_all.csv  GAPDHiso2_V2K_all.csv  GAPDHiso2_V2P_all.csv  RPL27_Y75D_all.csv  RPL27_Y75G_all.csv  RPL27_Y75K_all.csv  RPL27_Y75P_all.csv  RPL36_L94D_all.csv  RPL36_L94G_all.csv  RPL36_L94K_all.csv  RPL36_L94P_all.csv  RPS2_V128D_all.csv  RPS2_V128G_all.csv  RPS2_V128K_all.csv  RPS2_V128P_all.csv  RPS6_L111D_all.csv  RPS6_L111G_all.csv  RPS6_L111K_all.csv  RPS6_L111P_all.csv
amyloid_wrappers/: LICENSE  MANIFEST.in  README.md  changes.md  config.cfg  environment.yml  pyproject.toml  requirements.txt  wrappers_run.py
amyloid_wrappers/config/: predictors.toml
amyloid_wrappers/legacy/: README.md  appnn_converter.R  parse_predictor.py  path_converter.py
amyloid_wrappers/scripts/: build_all_table.py  calibrate_weights.py
amyloid_wrappers/src/: __init__.py  __main__.py
amyloid_wrappers/src/amyloid_wrappers/: __init__.py  paths.py
amyloid_wrappers/src/amyloid_wrappers.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
amyloid_wrappers/src/amyloid_wrappers/batch/: __init__.py  pipeline.py
amyloid_wrappers/src/amyloid_wrappers/cli/: __init__.py  app.py  batch.py  merge.py  parse.py  run.py  widemerge.py
amyloid_wrappers/src/amyloid_wrappers/core/: __init__.py  cache.py  config.py  inputs.py  merge.py  metascore.py
amyloid_wrappers/src/amyloid_wrappers/predictors/: aggreprot.py  appnn.py  pasta.py  path.py  waltz.py
amyloid_wrappers/src/amyloid_wrappers/runners/: appnn.py  base.py  path.py  registry.py
amyloid_wrappers/src/cli/: __init__.py  parse.py  run.py
amyloid_wrappers/src/core/: cache.py  config.py  merge.py
amyloid_wrappers/src/predictors/: __init__.py  archcandy.py  base.py  crossbeta.py  registry.py
amyloid_wrappers/src/runners/: __init__.py  appnn.py  path.py
amyloid_wrappers/tests/: test_batch.py  test_cache.py  test_cli_help.py  test_config_presets.py  test_golden.py  test_parsers.py  test_path_vendor.py  test_runners.py
amyloid_wrappers/tests/fixtures/: appnn_sample.csv  path_results.csv
metascores/: APP_metascore_table.csv  GAPDHiso1_metascore_table.csv  GAPDHiso2_metascore_table.csv
