[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "amyloid-wrappers"
version = "0.2.0"
description = "Unified wrappers and parsers for amyloidogenicity predictors"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "BHT Amyloid Team" },
]
keywords = ["bioinformatics", "amyloid", "protein-aggregation", "predictors"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
test = ["pytest>=7"]
dev = ["amyloid-wrappers[test]", "ruff>=0.4", "build>=1.2"]

[project.scripts]
amyloid-wrappers = "amyloid_wrappers.cli.app:main"
amyloid-parse = "amyloid_wrappers.cli.parse:main"
amyloid-merge = "amyloid_wrappers.cli.merge:main"
amyloid-run = "amyloid_wrappers.cli.run:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"
